--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
   </style>
 </head>
 <body>
-  <h2>Beam Stiffness Solver — Canvas Testbed</h2>
+  <h2>Beam Solver </h2>
 
   <div class="row">
     <label>Segments (max 10): <input id="numSegments" type="number" min="1" max="10" value="2"></label>
@@ -963,3 +963,4 @@
   </script>
 </body>
 </html>
+
